# PICO-BK-GID

./: .gitignore  BKDE.sln  BKDL.sln  BKHDDTool.sln  BKTurbo8.sln  BKemu.sln  BKemu_XP.sln  CMakeLists.txt  HDDImgMaker.sln  ITCPC.sln  README.md
Astyle/: Astylemy.bat
BK/: AboutDlg.cpp  AboutDlg.h  BK.cpp  BK.h  BK.rc  BK.vcxproj  BK.vcxproj.filters  BKDoc.cpp  BKDoc.h  BKSettPage_1.cpp  BKSettPage_1.h  BKSettPage_2.cpp  BKSettPage_2.h  BKSettPage_3.cpp  BKSettPage_3.h  BKSettingsDlg.cpp  BKSettingsDlg.h  BKVKBDView.cpp  BKVKBDView.h  BKView.cpp  BKView.h  BK_version.rc  BaseDialog.cpp  BaseDialog.h  ClassDiagram.cd  DisasmView.cpp  DisasmView.h  DocPaneDlgViewBase.cpp  DocPaneDlgViewBase.h  MainFrm.cpp  MainFrm.h  MemDumpView.cpp  MemDumpView.h  OscillatorView.cpp  OscillatorView.h  Print.Dlg  RegDumpViewCPU.cpp  RegDumpViewCPU.h  RegDumpViewFDD.cpp  RegDumpViewFDD.h  (+17 more)
BK/BKOscScrD2D/: BKOscScrD2D.cpp  BKOscScrD2D.h  BKOscScrD2D.vcxproj  BKOscScrD2D.vcxproj.filters  framework.h
BK/BKOscScrGDI/: BKOscScr.def  BKOscScrGDI.cpp  BKOscScrGDI.h  BKOscScrGDI.vcxproj  BKOscScrGDI.vcxproj.filters  pch.cpp
BK/BKOscScrOGL/: BKOscScrOGL.cpp  BKOscScrOGL.h  BKOscScrOGL.vcxproj  BKOscScrOGL.vcxproj.filters  targetver.h
BK/BKScreenD2D/: BKScreenD2D.cpp  BKScreenD2D.h  BKScreenD2D.vcxproj  BKScreenD2D.vcxproj.filters  framework.h
BK/BKScreenD3D/: BKScreenD3D.cpp  BKScreenD3D.h  BKScreenD3D.vcxproj  BKScreenD3D.vcxproj.filters  _uses.txt
BK/BKScreenD3D11/: BKScreenD3D.cpp  BKScreenD3D.h  BKScreenD3D.vcxproj  BKScreenD3D.vcxproj.filters  PixelShader.hlsl  VertexShader.hlsl
BK/BKScreenDIB/: BKScreen.def  BKScreenDIB.cpp  BKScreenDIB.h  BKScreenDIB.vcxproj  BKScreenDIB.vcxproj.filters
BK/BKScreenOGL/: BKScreenOGL.cpp  BKScreenOGL.h  BKScreenOGL.vcxproj  BKScreenOGL.vcxproj.filters  wglext.h
BK/devemu/: AYSnd.cpp  AYSnd.h  BKMessageBox.cpp  BKMessageBox.h  BKSoundDevice.cpp  BKSoundDevice.h  BKSound_Defines.h  BkSound.cpp  BkSound.h  Board.cpp  Board.h  Board_10.cpp  Board_10.h  Board_10_FDD.cpp  Board_10_FDD.h  Board_11.cpp  Board_11.h  Board_11M.cpp  Board_11M.h  Board_11M_FDD.cpp  Board_11M_FDD.h  Board_11_FDD.cpp  Board_11_FDD.h  Board_EXT32.cpp  Board_EXT32.h  Board_MSTD.cpp  Board_MSTD.h  CPU.cpp  CPU.h  Config.cpp  Config.h  Covox.cpp  Covox.h  CpuMap.cpp  Device.cpp  Device.h  FDDController.cpp  FDDController.h  FloppyDrive.cpp  FloppyDrive.h  (+23 more)
BK/emutools/: BKAYVolPan.cpp  BKAYVolPan.h  BKKbdButn.cpp  BKKbdButn.h  BKOscScr.cpp  BKOscScr.h  BKOscScr_Shared.h  BKPaletteDlg.cpp  BKPaletteDlg.h  BreakPoint.cpp  BreakPoint.h  BrowseForFolder.cpp  BrowseForFolder.h  Debugger.cpp  Debugger.h  DebuggerAssembly.cpp  DisasmCtrl.cpp  DisasmCtrl.h  DropTarget.h  DumpListCtrl.cpp  DumpListCtrl.h  EnterEditCtrl.cpp  EnterEditCtrl.h  ExceptionHalt.cpp  ExceptionHalt.h  JoyEditDlg.cpp  JoyEditDlg.h  LoadImgDlg.cpp  LoadImgDlg.h  LoadMemoryDlg.cpp  LoadMemoryDlg.h  LoadTapeDlg.cpp  LoadTapeDlg.h  MultiEditListCtrl.cpp  MultiEditListCtrl.h  PrintDlg.cpp  PrintDlg.h  ScriptRunner.cpp  ScriptRunner.h  TapeManagerDlg.cpp  (+5 more)
BK/memmap/: BKMEMDlg.cpp  BKMEMDlg.h  SprScr.cpp  SprScr.h  SprView.cpp  SprView.h  SprWnd.cpp  SprWnd.h
BK/res/: AboutThnx.html
BK/tools/: buildinc.js
BKDE/: BKDE.cpp  BKDE.h  BKDE.rc  BKDE.vcxproj  BKDE.vcxproj.filters  BKDEDlg.cpp  BKDEDlg.h  BKFileView.cpp  BKImage.cpp  BKImage.h  BKListCtrl.cpp  BKListCtrl.h  ChangeAddrDialog.cpp  ChangeAddrDialog.h  Dlgbars.cpp  Dlgbars.h  FFPickerDlg.cpp  FFPickerDlg.h  RenameDialog.cpp  RenameDialog.h  Settings.cpp  Settings.h  TrueColorToolBar.cpp  TrueColorToolBar.h  framework.h  resource.h  versionNo.h
BKDE/SprView/: SprScr.cpp  SprScr.h  SprView_res.rar  SprWnd.cpp  SprWnd.h  readme.txt
BKDE/imgos/: BKDEDefines.h  BKDirDataItem.h  BKFloppyImage_ANDos.cpp  BKFloppyImage_ANDos.h  (+26 more)
BKDL/: BKDL.cpp  BKDL.h  BKDL.rc  BKDL.vcxproj  BKDL.vcxproj.filters  Resource.h  framework.h  pch.h  readme.txt  version.rc
BKHDDTool/: BKHDDTool.cpp  BKHDDTool.h  BKHDDTool.vcxproj  BKHDDTool.vcxproj.filters  Convert.cpp  framework.h  readme.txt  versionNo.h
BKTurbo8/: Assemble.cpp  Assemble.h  BKToken.h  BKTools.cpp  BKTools.h  BKTools.vcxproj  BKTools.vcxproj.filters  BKTurbo8.cpp  BKTurbo8.h  BKTurbo8.vcxproj  BKTurbo8.vcxproj.filters  BKbin2obj.cpp  BKbin2obj.h  BKbin2obj.vcxproj  BKbin2obj.vcxproj.filters  ErrorManager.cpp  ErrorManager.h  GlobalStructs.h  Globals.cpp  Globals.h  LabelManager.cpp  LabelManager.h  LabelTable.cpp  LabelTable.h  Listing.cpp  Listing.h  ObjParams.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Parser2.cpp  Parser2.h  Reader.cpp  Reader.h  ScriptAsm.cpp  ScriptAsm.h  framework.h  readme.txt  version.rc  (+3 more)
Docs/: 00001-01.32.03.html  00008-01.32.01.html  00015-01.32.01.html  ALTBIOS.html  BKTurbo8.html  Emulator Documentation.html  QuickGuide.html  Zaltsman.html  kbdLayout_BKPC.html  msf_doc.html  programming_BK10.html
FakeWin/: CArray.h  CFile.h  CString.h  Mmsystem.h  SDKDDKVer.h  VersionHelpers.h  WinUser.h  afx.h  afxwin.h  afxwinappex.h  d2d1.h  d3d9.h  vfw.h  windef.h  windows.h  winioctl.h  winnt.h
HDDImgMaker/: HDDImgMaker.cpp  HDDImgMaker.h  HDDImgMaker.rc  HDDImgMaker.vcxproj  HDDImgMaker.vcxproj.filters  HDDImgMakerDlg.cpp  HDDImgMakerDlg.h  framework.h  resource.h  version.rc  versionNo.h
ITCPC/: BKASCFile.cpp  BKASCFile.h  BKFile.cpp  BKFile.h  BaseFile.cpp  BaseFile.h  ITCPC.cpp  ITCPC.h  ITCPC.vcxproj  ITCPC.vcxproj.filters  ReadMe.txt  WinFile.cpp  WinFile.h  bk2ibm.cpp  bk2ibm.h  framework.h  ibm2bk.cpp  ibm2bk.h  ibm2vxt.cpp  ibm2vxt.h  version.rc  versionNo.h
shared/: !readme.txt  BKDRT11Header.h  BKImgFile.cpp  BKImgFile.h  BKParseImage.cpp  BKParseImage.h  HDIStuff.cpp  HDIStuff.h  Ini.cpp  Ini.h  MFCStrUtil.cpp  MFCStrUtil.h  StringUtil.cpp  StringUtil.h  ToolManager.cpp  ToolManager.h  fdrawcmd.h  getopt.cpp  getopt.h  gfresizedialoghelper.cpp  gfresizedialoghelper.h  libdspl-2.0.cpp  libdspl-2.0.h
src/: BKKey.c  BKKey.h  CPSRAM.cpp  CPSRAM.h  aySoundSoft.c  aySoundSoft.h  config_em.h  debug.h  fs.h  main.cpp  manager.c  manager.h  pico-vision.c  pico-vision.h  ps2_codes.h
(+41 files in other folders)
